valorant agents commited

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3ISA Demo on Feb 5</title>
+    <title>VALORANT</title>
 </head>
 <body>
-    <h1>para 1</h1>
-    <h2>version 2</h2>
-    <p>2nd commit</p>
+    <h1>Agents:</h1>
+    <p>Astra</p>
+    <p>Breach</p>
+    <p>Brimstone</p>
+    <p>Cypher</p>
+    <p>Jett</p>
+    <p>Killjoy</p>
+    <p>Neon</p>
+    <p>Omen</p>
+    <p>Phoenix</p>
+    <p>Raze</p>
+    <p>Reyna</p>
+    <p>Sage</p>
+    <p>Skye</p>
+    <p>Sova</p>
+    <p>Yoru</p>
 </body>
 </html>
